--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-3022790db11.json.zip
-combo-8e814-firebase-adminsdk-8k5uw-99d0bd3a7f.json
+evang9-combo-*.json
 node_modules/*
-3022790db11.json/*
+mysql/*
 .DS_Store
